made changes to shop application and its working now

--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -48,7 +48,7 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Home</a></li>
-        <li><a href="{% url 'shop: product_'}">Products</a></li>
+        <li><a href="{% url 'shop:product_list'%}">Products</a></li>
         <li><a href="#">Deals</a></li>
         <li><a href="#">Blog</a></li>
         <li><a href="#">Contact</a></li>
