--- a/shop/templates/shop/product/detail.html
+++ b/shop/templates/shop/product/detail.html
@@ -1,7 +1,7 @@
 {% extends "shop/base.html" %}
 {% load static %}
 
-% block title %}
+{% block title %}
 	{% if category %}{{ category.title }}{% else %}Products{% endif %}
 {% endblock %}
 
