--- a/shop/templates/shop/product/detail.html
+++ b/shop/templates/shop/product/detail.html
@@ -6,13 +6,61 @@
 {% endblock %}
 
 {% block content %}
-	<div class="product-detail">
-		<img src="{% if product.image %}{{ product.image.url }}{% else %}
-{% static "img/no_image.png" %}{% endif %}">
-	<h1>{{ product.name }}</h1>
-	<h2><a href="{{ product.category.get_absolute_url }}">{{ product.
-category }}</a></h2>
-	<p class="price">${{ product.price }}</p>
-	{{ product.description|linebreaks }}
+<div class="container">
+    <div class="row">
+    	<div class="col-md-12">
+			<div class="col-sm-6 col-md-4">
+				<div class="thumbnail" >
+					<img src="{{ product.image }}" class="img-responsive">
+					<div class="caption">
+						<div class="row">
+							<div class="col-md-9">
+								<hr>
+								<h3><strong>{{product.name}}</strong></h3>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-8">
+				<div class="thumbnail" >
+					<div class="caption">
+						<div class="row">
+							<div class="col-md-6 col-xs-6 price">
+								<h4>
+								<strong>Price:</strong>${{product.price}}</h4>
+							</div>
+						</div>
+						<h4><strong>Product Description:</strong><br></h4>
+						<p>
+							<ul>
+							{% for line in product.description_as_list %}
+								<li>{{ line }}</li>
+							{% endfor %}
+						</ul>
+						</p>
+						<p><label for="select">Quantity:</label>
+							<select id="select">
+        <option value="">Select</option>
+				{%for num in product.stock_as_list %}
+				  {% if num != 0 %}
+           <option value="">{{ num }}</option>
+					{% endif %}
+				{% endfor %}
+      </select>
+						</p>
+						<div class="row">
+							<div class="col-md-3  pull-right">
+								<a href="#" class="btn btn-success btn-product"><span class="glyphicon glyphicon-shopping-cart"></span>Add to Cart</a></div>
+						</div>
+
+						<p> </p>
+					</div>
+				</div>
+			</div>
+
+        </div>
+
+	</div>
 </div>
 {% endblock %}
