--- a/shop/templates/shop/product/list.html
+++ b/shop/templates/shop/product/list.html
@@ -1,6 +1,5 @@
-
+{% extends "shop/base.html" %}
 {% load static %}
-
 {% block title %}
 	{% if category %}{{ category.name }}{% else %}Products{% endif %}
 {% endblock %}
@@ -32,4 +31,3 @@
         {% endfor %}
     </div>
 {% endblock %}
-  	
