--- a/portfolio/templates/portfolio/login.html
+++ b/portfolio/templates/portfolio/login.html
@@ -9,4 +9,8 @@
     {{ form.as_p }}
     <button type="submit">Login</button>
   </form>
+  <div class="container">
+  <a href="{% url 'social:begin' 'google-oauth2' %}" class="btn btn-info" role="button">Login with Google</a>
+  <a href="{% url 'social:begin' 'github' %}" class="btn btn-info" role="button">Login with Github</a>
+</div>
 {% endblock %}
