--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -1,68 +1,46 @@
 {% extends "portfolio/base.html" %}
-
-{% block title %}Home{% endblock %}
-
+{% load staticfiles %}
 {% block content %}
 
-<div class="container">
-  <div class="row">
-    <div class="col-sm-4">
-      <div class="panel panel-primary">
-        <div class="panel-heading">BLACK FRIDAY DEAL</div>
-        <div class="panel-body"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
-        <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
-      </div>
-    </div>
-    <div class="col-sm-4">
-      <div class="panel panel-danger">
-        <div class="panel-heading">BLACK FRIDAY DEAL</div>
-        <div class="panel-body"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
-        <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
-      </div>
-    </div>
-    <div class="col-sm-4">
-      <div class="panel panel-success">
-        <div class="panel-heading">BLACK FRIDAY DEAL</div>
-        <div class="panel-body"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
-        <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
-      </div>
-    </div>
-  </div>
-</div><br>
 
-<div class="container">
-  <div class="row">
-    <div class="col-sm-4">
-      <div class="panel panel-primary">
-        <div class="panel-heading">BLACK FRIDAY DEAL</div>
-        <div class="panel-body"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
-        <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
-      </div>
-    </div>
-    <div class="col-sm-4">
-      <div class="panel panel-primary">
-        <div class="panel-heading">BLACK FRIDAY DEAL</div>
-        <div class="panel-body"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
-        <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
-      </div>
-    </div>
-    <div class="col-sm-4">
-      <div class="panel panel-primary">
-        <div class="panel-heading">BLACK FRIDAY DEAL</div>
-        <div class="panel-body"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
-        <div class="panel-footer">Buy 50 mobiles and get a gift card</div>
-      </div>
-    </div>
-  </div>
-</div><br><br>
+<div class="page-container">
+    <h2 class="hello">Hello </h2>
+    <p>Welcome to the Onspar Shopping Website! Omaha's best online store!</p>
 
-<footer class="container-fluid text-center">
-  <p>Online Store Copyright</p>
-  <form class="form-inline">Get deals:
-    <input type="email" class="form-control" size="50" placeholder="Email Address">
-    <button type="button" class="btn btn-danger">Sign Up</button>
-  </form>
-</footer>
+</div>
+<div class="content container">
+                  <div class="row">
+                  <div class="col-sm-4 col-md-4">
+                      <div class="panel panel-default">
+                        <div class="panel-body">
+                          <a href="https://imgbb.com/"><img src="https://image.ibb.co/dSY1bc/iphone.jpg" alt="iphone" height==250 width=250 border="0"></a>
+                                  <h2>Mobiles</h2>
+                                  <p>View Moblies</p>
+                          </div>
+                      </div>
+                  </div>
+
+                  <div class="col-sm-4 col-md-4">
+                      <div class="panel panel-default">
+                        <div class="panel-body">
+                          <a href="https://imgbb.com/"><img src="https://image.ibb.co/gcHoNH/laptop.jpg" alt="laptop" height==500 width=300 border="0"></a>
+                              <h2>Laptops</h2>
+                            <p>View Laptops</p>
+                        </div>
+                      </div>
+                    </div>
+
+                  <div class="col-sm-4 col-md-4">
+                      <div class="panel panel-default">
+                        <div class="panel-body">
+                          <a href="https://imgbb.com/"><img src="https://image.ibb.co/ij4Dpx/computer_accessories.png" alt="computer_accessories" height==500 width=300 border="0"></a>
+                            <h2>Shop</h2>
+                              <p>Browse accessories</p>
+                        </div>
+                      </div>
+                    </div>
 
 
+              </div>
+</div>
 {% endblock %}
