--- a/portfolio/templates/portfolio/login.html
+++ b/portfolio/templates/portfolio/login.html
@@ -11,6 +11,7 @@
   </form>
   <div class="container">
   <a href="{% url 'social:begin' 'google-oauth2' %}" class="btn btn-info" role="button">Login with Google</a>
+   <a href="{%url 'register'%}" class="btn btn-info" role="button">Create new account</a>
   <a href="{% url 'social:begin' 'github' %}" class="btn btn-info" role="button">Login with Github</a>
 </div>
 {% endblock %}
