Added Google Translator for Product Reviews and added Landing Page

--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -10,6 +10,8 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  {% block javascript %}
+  {% endblock %}
   <style>
     /* Remove the navbar's default rounded borders and increase the bottom margin */
     .navbar {
@@ -61,10 +63,10 @@
     </div>
   </div>
 </nav>
-</body>
-</html>
 {% block content %}
 
   <!--template content-->
 
 {% endblock %}
+</body>
+</html>
