--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -13,7 +13,7 @@
                 {{ post.published_date }}
             </div>
 
-            <h2>{% if user.is_authenticated %}<a href="{{ post.get_absolute_url }}">{% endif %}{{ post.title }}</a></h2>
+            <h2>{% if user.is_authenticated and user == post.author %}<a href="{{ post.get_absolute_url }}">{% endif %}{{ post.title }}</a></h2>
 
             <p>{{ post.text|linebreaksbr }}</p>
         </div>
