--- a/cart/templates/cart/checkout.html
+++ b/cart/templates/cart/checkout.html
@@ -1,4 +1,6 @@
-{% extends 'portfolio/base.html' %}
+{% extends "shop/base.html" %}
+{% load static %}
+
 {% block content %}
     <div>
       <ol>
