--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -13,34 +13,32 @@
   {% block javascript %}
   {% endblock %}
   <style>
-    /* Remove the navbar's default rounded borders and increase the bottom margin */
-    .navbar {
-      margin-bottom: 50px;
+body {background-color: white;}
+#ty7
+ {
+      margin-bottom: 0px;
       border-radius: 0;
+      max-height:100%;
     }
-
-    /* Remove the jumbotron's default bottom margin */
-     .jumbotron {
-      margin-bottom: 0;
-    }
-
-    /* Add a gray background color and some padding to the footer */
-    footer {
-      background-color: #f2f2f2;
-      padding: 25px;
+    #p789
+    {
+    background-color: #C0C0C0;
+    margin-bottom: 0px;
+      border-radius: 0;
+      max-height:100%;
     }
   </style>
 </head>
 <body>
 
-<div class="jumbotron">
+<div id=p789  class="jumbotron">
   <div class="container text-center">
     <h1>Onspar.com</h1>
     <p>Omaha's Best Online Store</p>
   </div>
 </div>
 
-<nav class="navbar navbar-inverse">
+<nav id=ty7 class="navbar navbar-inverse" >
   <div class="container-fluid">
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
