--- a/cart/templates/cart/detail.html
+++ b/cart/templates/cart/detail.html
@@ -1,4 +1,6 @@
+{% extends "cart/base.html" %}
 {% load static %}
+
 {% block title %}
    <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
