--- a/portfolio/templates/static/css/base.css
+++ b/portfolio/templates/static/css/base.css
@@ -1,5 +1,29 @@
 @import url(http://fonts.googleapis.com/css?family=Ubuntu);
+ /* Remove the navbar's default rounded borders and increase the bottom margin */
+ .navbar {
+      margin-bottom: 50px;
+      border-radius: 0;
+    }
 
+    /* Remove the jumbotron's default bottom margin */
+     .jumbotron {
+      margin-bottom: 0;
+    }
+
+    /* Add a gray background color and some padding to the footer */
+footer {
+      background-color: #f2f2f2;
+      padding: 25px;
+    }
+    /* On small screens, set height to 'auto' for sidenav and grid */
+@media screen and (max-width: 767px) {
+   .sidenav {
+                height: auto;
+                padding: 15px;
+            }
+
+ .row.content {
+                height: auto;
 body {
     margin:0;
     padding:0;
@@ -27,11 +51,7 @@ a.button, input[type="submit"] {
     font-size:14px;
     border:0;
 }
-a.img
-{
-max-width: 50%;
-max-height: 50%;
-}
+
 a.button.light {
     color:#666;
     background:#ededed;
@@ -77,7 +97,8 @@ table.cart {
 }
 
 table.cart img {
-    width:180px;
+     max-width: 50%;
+    max-height: 50%;
 }
 
 tbody td.num {
@@ -189,14 +210,15 @@ ul.errorlist {
 }
 
 .product-list .item {
-    width:25%;
+    max-width: 50%;
+    max-height: 50%;
     padding:10px 20px 10px 0;
     float:left;
     text-align:center;
     line-height:1.2;
 }
 
-.product-list .item img {
+#main img {
     max-width: 50%;
     max-height: 50%;
     margin-bottom:8px;
@@ -319,6 +341,6 @@ ul.errorlist {
 }
 
 .recommendations.cart img {
-   max-width: 50%;
+    max-width: 50%;
     max-height: 50%;
 }
