--- a/cart/static/css/base.css
+++ b/cart/static/css/base.css
@@ -193,8 +193,7 @@ ul.errorlist {
 }
 
 .product-list .item img {
-    width:50%;
-
+    width:100%;
     margin-bottom:8px;
 }
 
@@ -291,8 +290,7 @@ ul.errorlist {
 }
 
 .recommendations img {
-   height:50%;
-   width:50%;
+    width:200px
 }
 
 .recommendations p {
@@ -314,6 +312,5 @@ ul.errorlist {
 }
 
 .recommendations.cart img {
-   height:50%;
-   width:50%;
+    width:120px;
 }
