--- a/cart/templates/cart/checkout.html
+++ b/cart/templates/cart/checkout.html
@@ -1,14 +1,12 @@
-{% extends "shop/base.html" %}
-{% load static %}
-
+{% extends 'portfolio/base.html' %}
 {% block content %}
     <div>
       <ol>
             <h3><strong><li>Shipping Address:</li></strong></h3>
                       <div style="padding: 0px 10px 5px 5px ">
-                          <h5><strong>{{ profile.address }},</strong></h5>
-                          <h5><strong>{{ profile.city }}, {{ profile.zipcode }}</strong></h5>
-                          <h5><strong>{{ profile.country }}</strong></h5>
+                          <h4><strong>{{ profile.address }},</h4></strong>
+                          <h4><strong>{{ profile.city }}, {{ profile.zipcode }}</h4></strong>
+                          <h4><strong>{{ profile.country }}</h4></strong>
                       </div>
             <h3><strong><li>Review Items:</li></strong></h3>
             <div class="container">
@@ -48,19 +46,19 @@
               <h4><strong>{{ applied_coupon }}</h4></strong>
             <h3><strong><li>Order Summary:</li></strong></h3>
             <div style="padding: 0px 10px 5px 5px ">
-                <h5><strong>Items({{ cart.total_cart_items }}):{{ cart.get_total_price }}</strong></h5>
-                <h5><strong>Shipping & Handling: {{ cart.ship_and_handle }}</strong></h5>
-                <h5><strong>Total Before Tax:{{ cart.total_before_tax }}</strong></h5>
-                <h5><strong>Estimated Tax:{{ cart.estimated_tax }}</strong></h5>
+                <h4><strong>Items({{ cart.total_cart_items }}):{{ cart.get_total_price }}</h4></strong>
+                <h4><strong>Shipping & Handling: {{ cart.ship_and_handle }}</h4></strong>
+                <h4><strong>Total Before Tax:{{ cart.total_before_tax }}</h4></strong>
+                <h4><strong>Estimated Tax:{{ cart.estimated_tax }}</h4></strong>
                 <hr>
                 {% if applied > 0 %}
-                  <h2 style="color:red">Order Total : {{ cart.final_price }}</h2>
+                  <h2 style="color:red">Order Total:{{ cart.final_price }}</h2>
                 {% else %}
-                  <h2 style="color:red">Order Total : {{ coupon_final_price }}</h2>
+                  <h2 style="color:red">Order Total:{{ coupon_final_price }}</h2>
                 {% endif %}
             </div>
       </ol>
-            <a class="btn btn-warning" style="float:right" href="#" role="button">Proceed with Payment</a>
+            <a class="btn btn-warning" style="float:right" href="{% url "cart:payment" %} "role="button">Proceed with Payment</a>
     </div>
 
 {% endblock %}
