Fixed Social Login Profiles and Other minor Fixes

--- a/cart/templates/cart/checkout.html
+++ b/cart/templates/cart/checkout.html
@@ -27,7 +27,7 @@
                   <th scope="row">{{ product.name }}</th>
                   <td><img src="{{ product.image }}"height="75" width="75"></td>
                   <td>{{ product.price }}</td>
-                  <td>{{ item.quantity_x }}</td>
+                  <td>{{ item.quantity}}</td>
                 </tr>
                 {% endwith %}
             {% endfor %}
