--- a/portfolio/templates/portfolio/fillProfile.html
+++ b/portfolio/templates/portfolio/fillProfile.html
@@ -1,6 +1,6 @@
 {% extends "portfolio/base.html" %}
 
-{% block title %}Fill your Profile{% endblock %}
+{% block title %}Fill your Profile to continue{% endblock %}
 
 {% block content %}
 <div class="container">
